
=======================================================
            WanT code:  Log of Changes 
=======================================================

14 Jan 2005      IOTK updated to v1.0.0beta4, including the workarounds for ifort and
                 pgi compilaers. (AF) 

11 Jan 2005      Incompatibility of IOTK v.0.3.5 with MKL 7.0 libs detected. (AF)

29 Dec 2004      Hamiltonian output files now are all written in work_dir from input.
                 Iotk updated to 0.3.5 and test checked. Small bugs fixed. (AF) 

24 Dec 2004      windows_module.f90 moved to windows.f90. Routine 
                 widows_read_ext added, want_init updated. Fermi energy
                 data added to windows module (and added to pw_export).
                 MXDBND moved to NBND according to PWSCF. Plot.x not
                 yet completely symcronized but compiling. New implementation
                 of wfc started in module wfc.f90. Test references updated. (AF)

23 Dec 2004      Syncronizing HAMILTONIAN. Small bugs fixed. (AF)

19 Dec 2004      Tests updated. Bug fixing in PWEXPORT-WANT interface.
                 FMT changed in overlap_module IO. (AF)

18 Dec 2004      SUMMARY subroutine completed with Gaussian centers data. Bugs fixed in 
                 WFC_READ_EXT. PROJECTION subroutine updated. Bug fixed in 
                 WANNIER_CENTERS_INIT routine. Disentangle is completely IOTK working.
                 Tests updated and checked. (AF)

17 Dec 2004      Read subroutines for DFT data renamed to *_read_ext (in order to 
                 distinguish with the routines used in the internal IO). Some variables
                 renamed according to PWSCF notation (mxdgve -> npw; npwx -> npwkx; 
                 wtkpt -> wk). window.f90 code is obsolescent. Summary routine completed.
                 Ggrids reading routine done. genbtr, spline, splint routines removed 
                 from CVS because no longer used. ZGEMM and ZGESVD removed from CVS