@@ -5,9 +5,6 @@
    work_dir = './'
    nkpts_in   = 6
    nkpts_max  = 500
-   nk(1) = 4
-   nk(2) = 4
-   nk(3) = 4
  /
 L
 0.0 0.5 0.0
